--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -1,10 +1,11 @@
+{% load static %}%}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=\, initial-scale=1.0" />
-  <link rel="stylesheet" href="/base/base.css" />
+  <link rel="stylesheet" href="{% static 'AnimaBlend/base/base.css' %}" />
   <link rel="stylesheet" href="/projectcss/navbar.css" />
   <link rel="stylesheet" href="/projectcss/main.css" />
   <link rel="stylesheet" href="/projectcss/myslick.css" />
