--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=\, initial-scale=1.0" />
   <link rel="stylesheet" href="{% static 'AnimaBlend/base/base.css' %}" />
-  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/navbar.css'}" />
-  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/main.css'}" />
-  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/myslick.css'}" />
+  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/navbar.css' %}" />
+  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/main.css' %}" />
+  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/myslick.css' %}" />
 
 
   <!-- icons cdn  -->
