--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=\, initial-scale=1.0" />
-  <link rel="stylesheet" href="{% static 'AnimaBlend/base/base.css' %}" />
+ <link rel="stylesheet" href="{% static 'AnimaBlend/base/base.css' %}" />
   <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/navbar.css' %}" />
   <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/main.css' %}" />
-  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/myslick.css' %}" />
-
+  <link rel="stylesheet" href="{% static 'AnimeBlend/projectcss/myslick.css' %}" /> 
+  <!-- <link rel="stylesheet" href="/AnimaBlend/static/AnimaBlend/projectcss/main.css"> -->
 
   <!-- icons cdn  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
