--- a/static/AnimaBlend/typo/typo.scss
+++ b/static/AnimaBlend/typo/typo.scss
@@ -1,6 +1,6 @@
 @import url(./typo.scss);
-@import url(/button/button.scss);
-@import url(/theme/theme.scss);
+@import url(../button/button.scss);
+@import url(../theme/theme.scss);
 .gradiant-word-1 {
   background: linear-gradient(
     180deg,
