--- a/static/AnimaBlend/projectcss/main.css
+++ b/static/AnimaBlend/projectcss/main.css
@@ -3,7 +3,6 @@
   justify-content: flex-start;
   align-items: center;
 }
-
 .card-main-wrapper .card-container {
   position: relative;
   display: flex;
@@ -13,7 +12,6 @@
   gap: 100px 50px;
   padding: 100px 50px;
 }
-
 .card-main-wrapper .card-container .card-body {
   position: relative;
   display: flex;
@@ -27,7 +25,6 @@
   cursor: pointer;
   transition: 0.5s;
 }
-
 .card-main-wrapper .card-container .card-body .content {
   position: absolute;
   width: 100%;
@@ -37,7 +34,6 @@
   overflow: hidden;
   height: 55px;
 }
-
 .card-main-wrapper .card-container .card-body .card-imgbox {
   position: absolute;
   top: 20px;
@@ -47,10 +43,9 @@
   border-radius: 12px;
   transition: 0.5s;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   overflow: hidden;
 }
-
 .card-main-wrapper .card-container .card-body .card-imgbox .card-img {
   position: absolute;
   top: 0;
@@ -58,16 +53,12 @@
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
-
 .card-main-wrapper .card-container .card-body:hover {
   height: 400px;
 }
-
 .card-main-wrapper .card-container .card-body:hover .card-imgbox {
   top: -100px;
   scale: 0.75;
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
