--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -42,7 +42,7 @@
         <img class="logo-img mt8" src="{% static 'AnimaBlend/assets/mx player.png' %}" alt="" />
       </div>
       <p class="logo-name text-s">
-        <span class="text-s w800">Anime</span> Blend
+        <span class="text-s w800">Anima Blend</span>
       </p>
     </div>
 
@@ -54,9 +54,9 @@
           </a>
         </li>
         <li><a class="nav-link" href="">Movies</a></li>
-        <li><a class="nav-link" href="">Webshow</a></li>
-        <li><a class="nav-link" href="">Trailers</a></li>
-        <li><a class="nav-link" href="">About us</a></li>
+        <li><a class="nav-link" href="">Global Chat</a></li>
+        <li><a class="nav-link" href="">Series</a></li>
+        <li><a class="nav-link" href="">About</a></li>
       </ul>
     </div>
     <div class="login-search-wrapper">
@@ -303,6 +303,11 @@
       }
     })
   </script>
+
+  <script>
+    var myUrl = "{% static 'AnimaBlend/assets/anime-img/male0001.png' %}";
+  </script>
+
   <!-- nav bar js part  -->
   <script src="{% static 'AnimaBlend/Project Js/script.js' %}"></script>
   <script src="{% static 'AnimaBlend/Project Js/myslick.js' %}"></script>
