--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -305,8 +305,8 @@
   </script>
 
   <!-- nav bar js part  -->
-  <script src="{% static 'AnimaBlend/Project Js/script.js' %}"></script>
-  <script src="{% static 'AnimaBlend/Project Js/myslick.js' %}"></script>
+  <script src="{% static 'AnimaBlend/Project%20Js/script.js' %}"></script>
+  <script src="{% static 'AnimaBlend/Project%20Js/myslick.js' %}"></script>
 
 </body>
 
