add paths of animes images files

--- a/templates/AnimaBlend/home2.html
+++ b/templates/AnimaBlend/home2.html
@@ -16,7 +16,7 @@
         <h3><b>ANIME</b>BLEND</h3>
         <button><a href="home.html">See Anime </a></button>
     </div>
-    <div id="main">+
+    <div id="main">
         <div id="page">
             <div id="loop">
                 <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE
