animated btn and some changes in slider

--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{% static 'AnimaBlend/projectcss/main.css' %}" />
   <link rel="stylesheet" href="{% static 'AnimaBlend/projectcss/myslick.css' %}" />
   <link rel="stylesheet" href="{% static 'AnimaBlend/projectcss/anime.css' %}" />
+  <link rel="stylesheet" href="{% static 'AnimaBlend/projectcss/anime-btn.css' %}" />
 
 
   <!-- icons cdn  -->
@@ -224,11 +225,17 @@
   <!-- slider part -->
   <section class="banner-container">
     <div class="owl-carousel owl-theme">
-      <!-- <div class="item carousel-item">
-        <img src="assets/images/test_pic1.jpg" alt="">
-      </div> -->
       <div class="item carousel-item">
-        <img src="{% static 'AnimaBlend/assets/images/test-pic2.jpg' %}" alt="">
+        <img src="{% static 'AnimaBlend/assets/images/test3.jpg' %}" alt="">
+      </div>
+      <div class="item carousel-item">
+        <img src="{% static 'AnimaBlend/assets/images/test4.jpg' %}" alt="">
+      </div>
+      <div class="item carousel-item">
+        <img src="{% static 'AnimaBlend/assets/images/test5.jpg' %}" alt="">
+      </div>
+      <div class="item carousel-item">
+        <img src="{% static 'AnimaBlend/assets/images/test6.jpg' %}" alt="">
       </div>
     </div>
     </div>
@@ -249,8 +256,8 @@
           <a href="#">read more </a>
         </div>
       </div>
-
     </div>
+    <button class="anime-button btn3xs">csk </button>
   </section>
 
 
@@ -281,7 +288,7 @@
       nav: true,
       dots: true,
       autoplay: true,
-      autoplayTimeout: 10000,
+      autoplayTimeout: 2500,
       responsive: {
         0: {
           items: 1
