--- a/static/AnimaBlend/projectcss/myslick.css
+++ b/static/AnimaBlend/projectcss/myslick.css
@@ -1,33 +1,30 @@
-.owl-nav .owl-prev {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 6px;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 0;
-  margin-left: 20px;
-  opacity: 1;
-  padding: 10px;
-  color: #eeeded;
-  transition: transform 0.2s;
-  width: 28px;
-}
-
-.banner-container {
-  background-color: #121212;
-  margin: 0 auto;
-  max-width: 2056px;
-  min-height: 100vh;
+.banner-container .owl-carousel, .banner-container .owl-theme, .banner-container .owl-loaded, .banner-container .owl-drag {
   position: relative;
-  width: 100%;
 }
-.banner-container .carousel-item {
-  width: 100%;
-  height: 100vh;
-}
-.banner-container .carousel-item .carousel-item img {
-  max-width: 100%;
-  width: 100%;
-  height: 100vh;
+.banner-container .owl-carousel .owl-stage-outer .owl-stage .owl-item .item img, .banner-container .owl-carousel .owl-stage-outer .owl-stage .owl-item .carousel-item img, .banner-container .owl-carousel .owl-stage-outer .owl-stage .cloned .item img, .banner-container .owl-carousel .owl-stage-outer .owl-stage .cloned .carousel-item img, .banner-container .owl-theme .owl-stage-outer .owl-stage .owl-item .item img, .banner-container .owl-theme .owl-stage-outer .owl-stage .owl-item .carousel-item img, .banner-container .owl-theme .owl-stage-outer .owl-stage .cloned .item img, .banner-container .owl-theme .owl-stage-outer .owl-stage .cloned .carousel-item img, .banner-container .owl-loaded .owl-stage-outer .owl-stage .owl-item .item img, .banner-container .owl-loaded .owl-stage-outer .owl-stage .owl-item .carousel-item img, .banner-container .owl-loaded .owl-stage-outer .owl-stage .cloned .item img, .banner-container .owl-loaded .owl-stage-outer .owl-stage .cloned .carousel-item img, .banner-container .owl-drag .owl-stage-outer .owl-stage .owl-item .item img, .banner-container .owl-drag .owl-stage-outer .owl-stage .owl-item .carousel-item img, .banner-container .owl-drag .owl-stage-outer .owl-stage .cloned .item img, .banner-container .owl-drag .owl-stage-outer .owl-stage .cloned .carousel-item img {
+  height: 92vh;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.banner-container .owl-carousel .owl-nav, .banner-container .owl-theme .owl-nav, .banner-container .owl-loaded .owl-nav, .banner-container .owl-drag .owl-nav {
+  position: absolute;
+  bottom: 10%;
+  right: 4%;
+}
+.banner-container .owl-carousel .owl-nav button, .banner-container .owl-theme .owl-nav button, .banner-container .owl-loaded .owl-nav button, .banner-container .owl-drag .owl-nav button {
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  border: 2px solid #0079ff !important;
+  position: relative;
+  transition: 0.3s;
+}
+.banner-container .owl-carousel .owl-nav button span, .banner-container .owl-theme .owl-nav button span, .banner-container .owl-loaded .owl-nav button span, .banner-container .owl-drag .owl-nav button span {
+  font-size: 40px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+.banner-container .owl-carousel .owl-nav button:hover, .banner-container .owl-theme .owl-nav button:hover, .banner-container .owl-loaded .owl-nav button:hover, .banner-container .owl-drag .owl-nav button:hover {
+  scale: 1.2 !important;
+  background-color: #0079ff !important;
 }/*# sourceMappingURL=myslick.css.map */
