--- a/static/AnimaBlend/projectcss/myslick.scss
+++ b/static/AnimaBlend/projectcss/myslick.scss
@@ -1,33 +1,43 @@
-
-.owl-nav{
-  .owl-prev{
-    background-color: rgba(255,255,255,0.2);
-    border-radius: 6px;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 0;
-    margin-left: 20px;
-    opacity: 1;
-    padding: 10px;    color: #eeeded;
-    transition: transform 0.2s;
-    width: 28px;
-  }
-}
 .banner-container{
-  background-color: #121212;
-  margin: 0 auto;
-  max-width: 2056px;
-  min-height: 100vh;
-  position: relative;
-  width: 100%;
-  .carousel-item{
-    width: 100%;
-    height: 100vh;
-    .carousel-item img{
-      max-width: 100%;
-      width: 100%;
-      height: 100vh;
-      object-fit: cover;
+  .owl-carousel,.owl-theme,.owl-loaded,.owl-drag{
+    position: relative;
+    
+    .owl-stage-outer{
+      .owl-stage{
+        .owl-item,.cloned{
+          .item,.carousel-item{
+            img{
+              height: 92vh;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+    }
+    .owl-nav{
+      position:absolute;
+      bottom: 10%;
+      right: 4%;
+      button{
+        height: 40px ;
+        width: 40px ;
+        background-color: rgba(255, 255, 255, .1) !important;
+        border: 2px solid #0079ff !important;
+        position: relative;
+        transition: 0.3s;
+        span{
+         font-size: 40px ;
+         position: absolute;
+         transform: translate(-50%, -50%);
+        }
+       
+      }
+      button:hover{
+        scale: 1.2 !important;
+        background-color:  #0079ff !important;
+      }
+     
     }
   }
+
 }
