--- a/static/AnimaBlend/projectcss/navbar.css
+++ b/static/AnimaBlend/projectcss/navbar.css
@@ -112,6 +112,7 @@ li {
   box-shadow: inset 0 0 3px 0 rgba(255, 255, 255, 0.33);
   transition: 0.9s;
   z-index: 99;
+  height: 70vh;
 }
 .loginform .next-login-btn {
   background-image: linear-gradient(to left, #0079ff, #2689a5);
