--- a/static/AnimaBlend/projectcss/navbar.scss
+++ b/static/AnimaBlend/projectcss/navbar.scss
@@ -104,6 +104,7 @@ li {
   box-shadow: inset 0 0 3px 0 rgba(255, 255, 255, 0.33);
   transition: 0.9s;
   z-index: 99;
+  height: 70vh;
   .next-login-btn {
     background-image: linear-gradient(to left, #0079ff, #2689a5);
     border: 0;
