play template url added

--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -257,7 +257,7 @@
         </div>
       </div>
     </div>
-    <button class="anime-button btn3xs"><a href="">play video</a></button>
+    <button class="anime-button btn3xs"><a href="play">play video</a></button>
   </section>
 
 
