--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -249,20 +249,30 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <h2>NARUTO</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fugit beatae velit reprehenderit
-            dolores, fuga consequuntur ut minima dignissimos sapiente adipisci, voluptatibus repellat tempora, pariatur
-            libero eius quod quo vitae!</p>
-          <a href="#">read more </a>
+          <a class="anime-button " href="play">play video</a>
+          <!-- <button class="anime-button btn3xs"> </button> -->
+          <!-- <a href="#">read more </a> -->
         </div>
+        <h2 class="anime-name">NARUTO</h2>
       </div>
     </div>
-    <button class="anime-button btn3xs"><a href="play">play video</a></button>
+
   </section>
 
 
+  <!-- 
+  <section class="card-main-wrapper">
+    <div class="card-container "  >
+      <div class="card-imgbox ">
+        <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
+      </div>
+      <div class="card-body">
+        <h2>NARUTO</h2>
+      </div>
+    </div> -->
 
-
+  </section>
+  <button class="anime-button btn3xs"><a href="play">play video</a></button>
 
   <!-- ///////////////////////////////////////////////////////// -->
 
