--- a/static/AnimaBlend/projectcss/main.scss
+++ b/static/AnimaBlend/projectcss/main.scss
@@ -1,69 +1,163 @@
 .card-main-wrapper{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
 .card-container {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-    gap:100px 50px ;
-    padding: 100px 50px ; 
-    .card-body{
-           position: relative;
-           display: flex;
-           justify-content: center;
-           align-items: flex-start;
-           width:250px;
-           height: 390px;
-           background: #fff;
-           border-radius: 12px ;
-           background-image: linear-gradient(180deg, #121212 23%, #3c434d 96%);
-         // box-shadow: 0 35px 80px rgba(0,0,0,0.15);
-           cursor: pointer;
-           transition: 0.5s;
-           .content{
-            position: absolute;
-            width: 100%;
-            padding: 25px 15px ;
-            text-align: center;
-            top: 325px ;
-            overflow: hidden;
-            height: 55px;
-
-           }
-           .card-imgbox{
-              position: absolute;
-               top: 20px;
-              width: 220px;
-               height: 315px ;
-               background: #333;
-               border-radius: 12px;
-               transition: 0.5s;
-               object-fit: cover;
-               overflow: hidden;
-             .card-img{
-               position: absolute;
-               top: 0;
-               left: 0;
-               width: 100%;
-               height: 100%;
-               object-fit: cover;
-        }
-      } 
-
-    }
-        .card-body:hover{
-        height: 400px ;
-        }
-        .card-body:hover .card-imgbox{
-            top: -100px ;
-            scale: 0.75;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:100px 50px ;
+  padding: 50px 50px ; 
+  .card-body{
+         position: relative;
+         display: flex;
+         justify-content: center;
+         align-items: flex-start;
+         width:250px;
+         height: 390px;
+         background: #fff;
+         border-radius: 12px ;
+         background-image: linear-gradient(180deg, #121212 23%, #3c434d 96%);
+       // box-shadow: 0 35px 80px rgba(0,0,0,0.15);
+         cursor: pointer;
+         transition: 0.5s;
+         .content{
+          position: absolute;
+          width: 100%;
+          height: fit-content;
+          padding: 25px 15px ;
+          text-align: center;
+          top: 245px ;
+          height: 55px;
+          .anime-button {
+            position: relative;
+            padding: 10px 22px;
+            border-radius: 6px;
+            color: #fff;
+            cursor: pointer;
+            background-image: linear-gradient(to left, #0079ff, #2689a5);
+            transition: all 0.2s ease;
+            width: 150px ;
+            height: 50px ;
+            text-transform: capitalize;
+            text-decoration: none;
           }
-  
+          .anime-button:hover{
+           width:165px;
+           }
+
+         }
+         .anime-name{
+          position:absolute;
+          bottom: 10px ;
+         }
+         .card-imgbox{
+            position: absolute;
+            top: 20px;
+            width: 220px;
+             height: 315px ;
+             background: #333;
+             border-radius: 12px;
+             transition: 0.5s;
+             object-fit: cover;
+             overflow: hidden;
+             z-index: 9;
+           .card-img{
+             position: absolute;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             object-fit: cover;
+      }
+    } 
+
+  }
+      .card-body:hover{
+      height: 390px ;
+      }
+      .card-body:hover .card-imgbox{
+          top: -50px ;
+          scale: 0.85;
         }
-      
+
 }
 
+}
+
+// .card-main-wrapper{
+// display: flex;
+// align-items: center;
+// justify-content: flex-start;
+// flex-wrap: wrap;
+// padding: 100px 50px ; 
+// .card-container{
+//     position: relative;
+//     display: flex;
+//     justify-content: flex-start;
+//     width:250px;
+//     height: 390px;  
+//     padding: 100px 50px ; 
+//     border-radius: 12px ;
+//     background-image: linear-gradient(180deg, #121212 23%, #3c434d 96%);
+//     // box-shadow: 0 35px 80px rgba(0,0,0,0.15);
+//     // z-index: 9;
+//     // .card-imgbox{
+//     //   position: absolute;
+//     //   // top: 20px;
+//     //   top:20px;
+//     //   left: 70px;
+//     //   // transform: translateX(-50%,-50%);
+//     //   width: 220px;
+//     //   height: 315px ;
+//     //   background: #333;
+//     //   border-radius: 12px;
+//     //   transition: 0.5s;
+//     //   object-fit: cover;
+//     //   overflow: hidden;
+//     // .card-img{                                                                                 
+//     //   position: absolute;
+//     //   top: 0;
+//     //   left: 0;
+//     //   width: 100%;
+//     //   height: 100%;
+//     //   object-fit: cover;
+//     //      }
+//     //   } 
+    
+
+//                .card-imgbox{
+//               position: absolute;
+//                top: 20px;
+//               width: 220px;
+//                height: 315px ;
+//                background: #333;
+//                border-radius: 12px;
+//                transition: 0.5s;
+//                object-fit: cover;
+//                overflow: hidden;
+//              .card-img{
+//                position: absolute;
+//                top: 0;
+//                left: 0;
+//                width: 100%;
+//                height: 100%;
+//                object-fit: cover;
+//         }
+//       } 
+//   .card-body{
+//     // position: absolute;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: flex-end;
+//     align-items: center;
+//     background: #fff;
+//     cursor: pointer;
+//     transition: 0.5s;
+//     }
+
+//   }
+// }
