--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -256,6 +256,58 @@
         <h2 class="anime-name">NARUTO</h2>
       </div>
     </div>
+    <div class="card-container ">
+      <div class=" card-body ">
+        <div class="card-imgbox ">
+          <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
+        </div>
+        <div class="content ">
+          <a class="anime-button " href="play">play video</a>
+          <!-- <button class="anime-button btn3xs"> </button> -->
+          <!-- <a href="#">read more </a> -->
+        </div>
+        <h2 class="anime-name">NARUTO</h2>
+      </div>
+    </div>
+    <div class="card-container ">
+      <div class=" card-body ">
+        <div class="card-imgbox ">
+          <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
+        </div>
+        <div class="content ">
+          <a class="anime-button " href="play">play video</a>
+          <!-- <button class="anime-button btn3xs"> </button> -->
+          <!-- <a href="#">read more </a> -->
+        </div>
+        <h2 class="anime-name">NARUTO</h2>
+      </div>
+    </div>
+    <div class="card-container ">
+      <div class=" card-body ">
+        <div class="card-imgbox ">
+          <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
+        </div>
+        <div class="content ">
+          <a class="anime-button " href="play">play video</a>
+          <!-- <button class="anime-button btn3xs"> </button> -->
+          <!-- <a href="#">read more </a> -->
+        </div>
+        <h2 class="anime-name">NARUTO</h2>
+      </div>
+    </div>
+    <div class="card-container ">
+      <div class=" card-body ">
+        <div class="card-imgbox ">
+          <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
+        </div>
+        <div class="content ">
+          <a class="anime-button " href="play">play video</a>
+          <!-- <button class="anime-button btn3xs"> </button> -->
+          <!-- <a href="#">read more </a> -->
+        </div>
+        <h2 class="anime-name">NARUTO</h2>
+      </div>
+    </div>
 
   </section>
 
