setup details page

--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -249,7 +249,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">play video</a>
+          <a class="anime-button " href="play">watch now</a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
@@ -262,7 +262,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">play video</a>
+          <a class="anime-button " href="play">watch now</a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
@@ -275,7 +275,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">play video</a>
+          <a class="anime-button " href="play">watch now</a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
@@ -288,7 +288,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">play video</a>
+          <a class="anime-button " href="play">watch now </a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
@@ -301,7 +301,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">play video</a>
+          <a class="anime-button " href="play">watch now</a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
@@ -324,7 +324,7 @@
     </div> -->
 
   </section>
-  <button class="anime-button btn3xs"><a href="play">play video</a></button>
+  <button class="anime-button btn3xs"><a href="play">watch now</a></button>
 
   <!-- ///////////////////////////////////////////////////////// -->
 
