setup details section

--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -249,7 +249,7 @@
           <img class="card-img " src="{% static 'AnimaBlend/assets/cards-images/card-img2.jpg' %}" alt="">
         </div>
         <div class="content ">
-          <a class="anime-button " href="play">watch now</a>
+          <a class="anime-button " href="details">watch now</a>
           <!-- <button class="anime-button btn3xs"> </button> -->
           <!-- <a href="#">read more </a> -->
         </div>
