home page started

--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -28,6 +28,16 @@
       </nav>
     </div>
     {% comment %} nav_bar_ends_here {% endcomment %}
+
+    {% comment %} welcome_things_start_here {% endcomment %}
+
+    <div class="welcome">
+      <div class="welcome-1">Welcome</div>
+      <div class="welcome-2">To The World</div>
+      <div class="welcome-3">of</div>
+      <div class="welcome-4">Anime</div>
+    </div>
+
     <div class="home-button">
       <a href="home"
         ><button class="button-1" role="button">Explore Anime</button></a
