--- a/static/AnimaBlend/indexcss.css
+++ b/static/AnimaBlend/indexcss.css
@@ -1,19 +1,22 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
+  background-color: #fff;
 }
 
 /* full_nav_css */
 
 .full-nav{
+  margin: 3px;
   display: flex;
+  border-radius: 12px;
+  background-color: #333;
 }
 
 .branding-nav{
   padding: 10px;
   padding-left: 20px;
   width: 40%;
-  background-color: #333;
   gap: 20px;
   margin: 0;
   font-weight: bold;
@@ -34,7 +37,6 @@ body {
 
 /* nav_bar_css_starts_here */
 .navbar {
-  background-color: #333;
   padding: 10px 0;
   display: flex;
   width: 100%;
@@ -64,6 +66,37 @@ body {
 }
 
 /* nav_bar_css_ends_here */
+
+
+/* welcome_css_starts_here */
+
+.welcome{
+  background-image: url(./assets/luffy.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 95vh;
+    border-radius: 20px;
+    margin: 5px;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+    font-size: 100px;
+    font-weight: bolder;
+    font-style: oblique;
+}
+
+.welcome-1{
+  color: #fff;
+}
+.welcome-2{
+  color: #EA4C89;
+}
+.welcome-3{
+  color: #fff;
+}
+.welcome-4{
+  color: #EA4C89;
+}
 
 .button-1 {
     background-color: #EA4C89;
