--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -62,36 +62,78 @@
       </div>
     </div>
 
-    {% comment %} AnimaChat_html_ends_here {% endcomment %}
+    {% comment %} AnimaChat_html_ends_here {% endcomment %} {% comment %}
+    paralax_background_html_starts_here {% endcomment %}
 
-    {% comment %} AnimeBlend_html_starts_here {% endcomment %}
+    <div class="paralax-section">
+      <div class="paralax-relative">
+        <div>
+          <span class="paralax-section-heading"
+            >Join <span class="tators">Community</span>
+          </span>
+        </div>
+        <div class="paralax-text">
+          Lonin and Enjoy <br />
+          Our <br />
+          Community features <br />
+        </div>
+        <div class="home-button">
+          <a href=""><button class="button-1" role="button">Login</button></a>
+        </div>
+      </div>
+    </div>
+
+    {% comment %} paralax_background_html_ends_here {% endcomment %} 
+
+
+    {% comment%} AnimeBlend_html_starts_here {% endcomment %}
 
     <div class="anima-chat">
       <div class="anima-chat-header">
-        <span class="dic2">Anima</span
-        ><span class="tators">Blend</span>
+        <span class="dic2">Anima</span><span class="tators">Blend</span>
       </div>
       <div class="anima-chat-container">
         <div class="anima-chat-image">
-          <img src="{% static "AnimaBlend/assets/index-images/anime.jpg" %}" width="360px" height="300px">
+          <img src="{% static "AnimaBlend/assets/index-images/anime.jpg" %}"
+          width="360px" height="300px">
         </div>
         <div class="anima-chat-text">
           <div class="anima-chat-text1">
             Explore The <br />
             World of <br />
             Anime <br />
-            with <br/>
+            with <br />
             <span class="dic2">Anima</span><span class="tators">Blend</span>
           </div>
         </div>
       </div>
       <div class="home-button">
-        <a href=""><button class="button-1" role="button">Explore Anime</button></a>
+        <a href="home"
+          ><button class="button-1" role="button">Explore Anime</button></a
+        >
       </div>
     </div>
 
     {% comment %} AnimeBlend_html_ends_here {% endcomment %}
 
+    {% comment %} About_section_html_starts_here {% endcomment %}
 
+    <div class="about-section">
+      <div class="about-heading"><span class="dic">Ab</span><span class="tators">out</span></div>
+      <div class="about-text">
+        This site is dedicated to <br/>
+        the world of anime. We <br/>
+        provide various sub-platforms <br/>
+        like - AnimaBlend to watch <br/>
+        all the Latest and Greatest <br/>
+        anime, AnimaChat to chat <br/>
+        with random people watching <br/>
+        anime on the site, Community <br/>
+        to connect with members and <br/>
+        send messages or suggetions.
+      </div>
+    </div>
+
+    {% comment %} About_section_html_ends_here {% endcomment %}
   </body>
 </html>
