made some fixes in index

--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -73,7 +73,7 @@
           </span>
         </div>
         <div class="paralax-text">
-          Lonin and Enjoy <br />
+          Login and Enjoy <br />
           Our <br />
           Community features <br />
         </div>
@@ -132,6 +132,8 @@
         to connect with members and <br/>
         send messages or suggetions.
       </div>
+      <hr class="about-hr">
+      <div class="footer">&#169 2024 Dictators All rights reserved</div>
     </div>
 
     {% comment %} About_section_html_ends_here {% endcomment %}
