--- a/static/AnimaBlend/indexcss.css
+++ b/static/AnimaBlend/indexcss.css
@@ -221,11 +221,31 @@ body {
 }
 
 .about-text {
+  display: inline-block;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #ea4c89;
+  color: #fff;
   margin: 20px;
   font-size: 20px;
-  font-weight: 200;
+  font-weight: bold;
   word-spacing: 5px;
   line-height: 1.5;
+  opacity: 0.5;
+}
+
+.about-hr{
+  width: 85vw;
+  border: 1px solid #fff;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.footer{
+  font-size: medium;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #fff;
 }
 
 /* About_section_css_ends_here */
