--- a/static/AnimaBlend/indexcss.css
+++ b/static/AnimaBlend/indexcss.css
@@ -8,7 +8,9 @@ body {
 
 .full-nav {
   margin: 1px;
+  padding: 10px 20px 10px 20px;
   display: flex;
+  align-items: center;
   border-radius: 12px;
   background-color: #333;
   position: sticky;
@@ -20,13 +22,49 @@ body {
 }
 
 .branding-nav {
-  padding: 10px;
-  padding-left: 20px;
-  width: 40%;
-  gap: 20px;
-  margin: 0;
+  width: 30%;
   font-weight: bold;
   font-size: larger;
+}
+
+.debian{
+  height: 20px;
+  width: 20px;
+}
+
+.search{
+  display: flex;
+  justify-content: right;
+  width: 30%;
+}
+.search form{
+  display: flex;
+  margin: 0;
+}
+.search input{
+  padding: 0px 10px 0px 10px;
+  border: 1px solid #ddd;
+  outline: none;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.search input:hover{
+  border: 1px solid #ea4c89;
+}
+
+.search button{
+  background-color: #fff;
+  border: none;
+  border-radius: 5px;
+  color: #333;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.search button:hover,
+.search button:focus {
+  background-color: #f082ac;
 }
 
 .branding-nav a {
@@ -47,8 +85,8 @@ body {
 
 /* nav_bar_css_starts_here */
 .navbar {
-  padding: 10px 0;
   display: flex;
+  justify-content: center;
   width: 100%;
 }
 
@@ -57,6 +95,8 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
 }
 
