--- a/static/AnimaBlend/search.css
+++ b/static/AnimaBlend/search.css
@@ -27,7 +27,7 @@ body {
 .card {
     width: 250px;
     height: 350px;
-    border-radius: 8px;
+    border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     font-family: Arial, sans-serif;
@@ -57,3 +57,20 @@ body {
     height: 80%;
     width: 100%;
   }
+  .card-image img{
+    border-radius: 12px;
+  }
+
+.search-no{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  color: #333;
+  opacity: 0.5;
+  font-size: 30px;
+  font-weight: bold;
+}
